# apps/main-service/src/domain/auth/dto/sigin-in.dto.ts
@@ -1,11 +1,0 @@
-import { IsEmail, IsNotEmpty, IsString } from "class-validator";
-
-export class SignInDto {
-    @IsNotEmpty()
-    @IsEmail()
-    email: string;
-  
-    @IsNotEmpty()
-    @IsString()
-    password: string;
-  }
